T02 and T03 task of the Project
